Changes in release 4.0:
* CHANGE sample calculated "smooth csplines" only in actual xrange
* CHANGE 'set term gif' compile-time option to write PNG format instead
* NEW 'set term png' and 'set term jpeg' using modern GD library
* NEW set size ratio now works for splots, too
* NEW grid options: {layerdefault | front | back}
* NEW plot option "smooth frequency"
* NEW terminal names now sorted alphabetically
* NEW "with palette" also for points
* NEW plotstyle "with filledcurves"
* NEW plotstyles boxes and candlesticks can be filled under control of
  "set style fill" options (needs --enable-filledboxes)
* NEW "set boxwidth <number> relative"
* NEW options to FIG terminal driver
* NEW parse errors in datafile reading now show the culprit
* NEW labels can be printed attached to a point
* FIXED interaction of "set xtics <incr>"  with time/date axes
* FIXED candlesticks now ignore order of high/low entries
* FIXED keeping old arrow options if new "set" command modifies it
* FIXED undoing a mouse zoom that started from autoscaled axis
* FIXED contour line colours in pm3d's "with palette" mode
* FIXED PostScript stack pollution caused by "Symbol Oblique" patch
* FIXED warnings from perl -w in tkcanvas terminal output
* FIXED dgrid3d floating point exception
* FIXED logscaled colorbox axis
* FIXED pgnuplot for Windows NT/2K/XP


Mouse and hotkey support in screen terminals
********************************************

The pm, x11, ggi and windows terminals support interactive work with mouse
and hotkeys. The usage of the mouse is mainly self-explanatory.  Just type
'h' in the graph window (hereafter we mean either PM or X11 terminal window)
and a short overview of commands will pop up.  The mouse is turned on and
off with the hotkey 'm'. See 'help mouse' and 'help bind' for more details.


=============================================================================


[3.8j]
* NEW PM3D support for pstricks terminal

[3.8i]