@@ -1,4 +1,5 @@
 Changes in release 4.0:
+* NEW 'set datafile separator {whitespace | "<char>"}
 * CHANGE sample calculated "smooth csplines" only in actual xrange
 * CHANGE 'set term gif' compile-time option to write PNG format instead
 * NEW 'set term png' and 'set term jpeg' using modern GD library
